--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "framer-motion": "^12.23.25",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-confetti": "^6.4.0",
