--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.25",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.344.0",
+    "motion": "^12.23.25",
     "react": "^18.3.1",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1"
